--- a/Sayfalar/hakkimizda.xaml
+++ b/Sayfalar/hakkimizda.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Staj_Projesi_Restoran_Yonetimi.Sayfalar.hakkimizda"
+             x:Class="Staj_Projesi_Restoran_Yonetimi.Sayfalar.Hakkimizda"
              Title="hakkımızda">
     <VerticalStackLayout>
 
