--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -129,9 +129,13 @@
                   Text="Yemek listesi"
                     HorizontalOptions="Center"
                    />
-                
-
+              
             </Grid>
+            <StackLayout Padding="20">
+                <Entry Placeholder="Kullanıcı Adı" x:Name="UsernameEntry" />
+                <Entry Placeholder="Şifre" IsPassword="True" x:Name="PasswordEntry" />
+                <Button Text="Giriş Yap" Clicked="OnLoginButtonClicked" />
+            </StackLayout>
         </VerticalStackLayout>
     </ScrollView>
 
