--- a/Sayfalar/hakkimizda.xaml
+++ b/Sayfalar/hakkimizda.xaml
@@ -14,17 +14,14 @@
            HorizontalOptions="Center" 
             />
         
+        
         <Label 
-            Text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus repudiandae rem non? Adipisci aliquid debitis voluptatum ipsam, ipsum enim error tenetur optio earum minima nesciunt perferendis blanditiis cupiditate obcaecati voluptatibus cumque, dicta, esse neque cum soluta perspiciatis odio ratione quos. Nobis, harum vitae magni, laboriosam quidem eos quis sapiente recusandae pariatur hic distinctio perspiciatis dicta, adipisci molestiae. In eveniet possimus esse amet tenetur assumenda aut perferendis, ipsum rem ipsa libero? Dignissimos omnis consequatur deserunt, molestias veniam totam! Ipsam cupiditate, quas pariatur magni officia eius numquam ratione reprehenderit placeat sunt eum iusto adipisci distinctio rerum autem voluptatibus, nihil vel corporis obcaecati?"
+            Text="1979 yılında kurulan Pagmat, kuru meyve sektöründe, konvansiyonel ve organik kurutulmuş meyve ve yan ürünlerini üreterek faaliyet göstermektedir. Ana ürünler arasında kuru üzüm, kayısı, incir ve kuru meyve karışımları ile bütün, doğranmış ve salçalı seçenekler yer alıyor.Pagmat'ın üretim tesisi, Batı Türkiye'nin Ege bölgesindeki yetiştirme bölgelerinin kalbinde yer almaktadır. Pagmat kalite, yenilik ve hizmet açısından Türk kurutulmuş gıda sektöründe lider konumdadır. Endüstri, yetiştiriciler, üniversite ve araştırma enstitüleri arasında güçlü bir işbirliği ve bağlantı kuran Pagmat, birçok projeye öncülük etmekte ve yetiştiricilerin eğitilmesine, tavsiye edilmesine ve izlenmesine yardımcı olmaktadır. Bu, şirkete sahadan müşteriye kadar olan zinciri kontrol etme konusunda eşsiz bir fırsat veriyor."
             VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-
-        <Image
-          Source="C:\Users\umutdrms\Desktop\download.png"
-           SemanticProperties.Description="Cute dot net bot waving hi to you!"
-           HeightRequest="150"
-           HorizontalOptions="Center" 
+            HorizontalOptions="Center" 
             />
-
+        
+        
+  
     </VerticalStackLayout>
 </ContentPage>
